fix(css fixes): fixes broken css files

--- a/projects/eamode/eang/themes/material/themepicker.css
+++ b/projects/eamode/eang/themes/material/themepicker.css
@@ -10,6 +10,7 @@
       background-repeat: no-repeat;
       box-shadow: none;
       background-position: center;
+      outline: none;
     }
     & .ea-themepicker-dropdown {
       position: absolute;
