--- a/projects/eamode/eang/themes/mode/layout.css
+++ b/projects/eamode/eang/themes/mode/layout.css
@@ -2,9 +2,16 @@
   & ea-layout {
     --ea-drawer-header-height: 4rem;
     --ea-drawer-footer-height: 4rem;
-    --ea-drawer-width: 300px;
+    --ea-drawer-width: var(--ea-drawer-width, 300px);
     --ea-toolbar-height: var(--ea-toolbar-height, 4rem);
     --drawer-width: 300px;
+    --ea-footer-height: var(--ea-footer-height, 4.5rem);
+    --ea-toolbar-color: var(--ea-toolbar-color, var(--ea-color-3));
+    --ea-drawer-background: var(
+      --ea-drawer-background,
+      var(--ea-color-background-4)
+    );
+    --ea-body-display: var(--ea-body-display, block);
 
     display: grid;
     height: 100vh;
@@ -25,14 +32,28 @@
       grid-area: main;
       overflow: auto;
       background: var(--ea-main-background);
+
+      & ea-footer {
+        width: 100%;
+        height: var(--ea-footer-height);
+        display: flex;
+        align-items: center;
+        background: var(--ea-color-background-2);
+        & p {
+          color: var(--ea-color-3);
+        }
+      }
     }
 
     & ea-body {
-      --ea-main-padding: var(--ea-main-padding, 0.5em 1em);
-      padding: var(--ea-main-padding);
+      --ea-main-margin: var(--ea-main-padding, 0.5em 1em);
+      margin: var(--ea-main-margin);
+      display: var(--ea-body-display);
+      min-height: 100%;
     }
 
     & ea-toolbar {
+      --ea-toolbar-display: var(--ea-toolbar-display, flex);
       font-size: 1rem;
       --ea-toolbar-padding: var(--ea-toolbar-padding, 0.5em 1em);
 
@@ -45,6 +66,8 @@
       grid-column: 1 / 4;
       z-index: 2;
       box-sizing: border-box;
+      align-items: center;
+      color: var(--ea-toolbar-color);
       &[shadow] {
         box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.3);
       }
@@ -70,6 +93,13 @@
         align-items: center;
         padding-right: var(--ea-toolbar-aside-padding);
       }
+
+      & p,
+      h1,
+      h2,
+      h3 {
+        margin: 0;
+      }
     }
 
     & ea-drawer {
@@ -78,7 +108,7 @@
       justify-content: space-between;
       display: flex;
       width: var(--ea-drawer-width);
-      background: var(--ea-color-background-4);
+      background: var(--ea-drawer-background);
 
       & section {
         flex-grow: 1;
@@ -104,7 +134,7 @@
         align-items: center;
         &:hover {
           text-decoration: none;
-          background-color: var(--ea-drawer-a-hover);
+          background-color: var(--ea-color-background-3);
         }
         &.active {
           background-color: var(--ea-color-background-3);
@@ -118,7 +148,7 @@
     &[nav-overlay] {
       display: grid;
       grid-template-rows: [ea-toolbar-start] var(--ea-toolbar-height) [ea-toolbar-end ea-main-start] 1fr [ea-footer-start ea-main-end];
-      grid-template-columns: [ea-drawer-start] var(--drawer-width) [ea-drawer-end ea-main-start] 1fr [ea-main-end];
+      grid-template-columns: [ea-drawer-start] var(--ea-drawer-width) [ea-drawer-end ea-main-start] 1fr [ea-main-end];
       height: 100vh;
     }
     &[nav-overlay] > ea-main {
@@ -138,7 +168,7 @@
 
     & [overlay] {
       grid-row: ea-toolbar-end / ea-main-end;
-      grid-column: ea-drawer-end / ea-main-end;
+      grid-column: ea-drawer-start / ea-main-end;
       background: #000;
       opacity: 0.5;
       z-index: 1;
